# meetup_projektwerkstatt_2026

./: .gitignore  .setup_example.bat  README.md
1_opencode/: README.md  setup.md  usage.md
2_computer_vision_intro/: README.md
2_test_gemma4_multimodal/: app.py  litert_lm_server.py  pyproject.toml  readme.md
3_mediapipe_detection/: README.md  setup.md  usage.md
3_mediapipe_detection/beispiele/: face_detection.py  hand_tracking.py  pose_estimation.py
4_qwen_vl_scene/: README.md  pyproject.toml  setup.md  usage.md
4_qwen_vl_scene/beispiele/: scene_understanding.py
_Projektwerkstatt_#1_2026_Computer_Vision/: pyproject.toml
_Projektwerkstatt_#1_2026_Computer_Vision/1_opencode/: README.md  setup.md
_Projektwerkstatt_#1_2026_Computer_Vision/3_mediapipe_detection/: README.md  pyproject.toml  setup.md
_Projektwerkstatt_#1_2026_Computer_Vision/4_qwen_vl_scene/: README.md  setup.md
