[project]
name = "meetup-projektwerkstatt-2026"
version = "0.1.0"
description = "Workshop examples for OpenCode, MediaPipe, and Qwen VL"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mediapipe==0.10.14",
    "opencv-python>=4.10,<5",
    "ollama>=0.5,<1",
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "pillow>=10,<12",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
